err/ice-yml-log-formatter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IceBox'...
Listing './lib/python3.5/site-packages/IceGrid'...
Listing './lib/python3.5/site-packages/IceMX'...
Listing './lib/python3.5/site-packages/IcePatch2'...
Listing './lib/python3.5/site-packages/IceStorm'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/ice_yml_log_formatter'...
Compiling './lib/python3.5/site-packages/ice_yml_log_formatter/src.py'...
***   File "./lib/python3.5/site-packages/ice_yml_log_formatter/src.py", line 20
    return regxp.sub(rf'{space}\1', text)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ice_yml_log_formatter-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slice'...
Listing './lib/python3.5/site-packages/slice/Freeze'...
Listing './lib/python3.5/site-packages/slice/Glacier2'...
Listing './lib/python3.5/site-packages/slice/Ice'...
Listing './lib/python3.5/site-packages/slice/IceBox'...
Listing './lib/python3.5/site-packages/slice/IceDiscovery'...
Listing './lib/python3.5/site-packages/slice/IceGrid'...
Listing './lib/python3.5/site-packages/slice/IceLocatorDiscovery'...
Listing './lib/python3.5/site-packages/slice/IcePatch2'...
Listing './lib/python3.5/site-packages/slice/IceSSL'...
Listing './lib/python3.5/site-packages/slice/IceStorm'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/zeroc_ice-3.6.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
